refactor: fix dtos in updateReviewee, updateReviewer & OAS
